# SimpleAgentChatTemplate

./: Makefile  README.md  TODO.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .dockerignore  .env.docker  .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20260304_0001_initial_schema.py
backend/app/: main.py
backend/app/api/: deps.py  health.py  internal.py  openai.py  openai_stream.py
backend/app/core/: config.py  db.py
backend/app/models/: __init__.py  entities.py
backend/app/schemas/: internal.py  openai.py  stream.py  workflow_execution.py  workflow_registry.py
backend/app/services/: conversations.py  workflow_execution.py  workflow_registry.py
backend/tests/: test_workflow_registry.py
backend/workflows/: email-chat-draft-or-clarify.yaml
frontend/: .env.docker  README.md  package-lock.json  package.json
frontend/src/: router.ts  style.css
frontend/src/api/: decode.ts  openai.ts  sse.ts
frontend/src/stores/: chat.ts
frontend/src/types/: openai.ts
frontend/src/views/: ChatPage.vue
