[project]
name = "simpleagentchattemplate-backend"
version = "0.1.0"
description = "FastAPI backend for YAML-driven chat platform"
requires-python = ">=3.12"
dependencies = [
  "fastapi==0.116.1",
  "uvicorn[standard]==0.35.0",
  "sqlalchemy==2.0.43",
  "alembic==1.16.5",
  "psycopg[binary]==3.2.10",
  "pydantic==2.11.7",
  "pydantic-settings==2.10.1",
  "python-dotenv==1.1.1",
  "pyyaml==6.0.2",
  "simple-agents-py",
]

[dependency-groups]
dev = [
  "pytest==8.4.2",
]

[tool.uv]
package = false
